[package]
name = "rss_pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
feed-rs = "2"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-socks2 = { version = "0.9", features = ["hyper-tls"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["http1"] }
nanohtml2text = "0.2"
rusqlite = "0.32"
schannel = "=0.1.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.11.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
